Upto anonymous functions & Veriable replacmenet analysis